# CPR

./: .gitignore  CMakeLists.txt  README.md  UPR  install.sh  packman  run  up  update.sh
.cache/clangd/index/: cli.c.313E8A8965CA2A47.idx  cli.h.11AE8608C556A5F8.idx  cli.h.4DAC26E1BB4ED407.idx  dependency_manager.c.BCB587ED513D1B7B.idx  dependency_manager.h.9E90860602EAFC02.idx  dependency_manager.h.B8DCDA124C9CB293.idx  file_manager.c.344C20A5446735CD.idx  file_manager.h.07E4803131B6E8EB.idx  file_manager.h.743B4754BCFFBFE2.idx  main.c.2A187653AF83C5EC.idx  package_manager.c.23187BC15E7D655B.idx  package_manager.h.591EAF783B75B9AC.idx  package_manager.h.F0CFE669F8940EAA.idx  repository.c.AEAFB101F5C73D8B.idx  repository.h.180BBB1D98A34ACD.idx  repository.h.3BFE8DA97CB7DA92.idx
date/: aur.txt  example-package.txt
include/: cli.h  dependency_manager.h  file_manager.h  package_manager.h  repository.h
src/: cli.c  cli.h  dependency_manager.c  file_manager.c  file_manager.h  main.c  package_manager.c  package_manager.h  repository.c  repository.h
tests/: a.out  test_cli.c  test_file_manager.c  test_repository.c
web/: create_db.js  index.js  package-lock.json  package.json  packages.db  upload.js
web/front/: index.html
web/public/: upr.js
web/public/css/: install.css  style.css
web/views/: index.ejs  install.ejs  menu.ejs
what/: where.txt
